slidecontent vertical align fix

--- a/less/promoslider.less
+++ b/less/promoslider.less
@@ -229,7 +229,7 @@
   //    height: 100%;
   max-width: 100%;
   max-height: 100%;
-  //  position: relative;
+//    position: relative;
   //  top: 48px;
   //  bottom: 48px;
   //  left: 48px;
@@ -298,12 +298,13 @@
           .slideContentInner {
             //            width: auto;
             //            height: auto;
+//            height: 100%;
             display: inline-block;
             max-width: 100%;
             max-height: 100%;
-            height: 100%;
             position: relative;
             overflow: hidden;
+            vertical-align: middle;
             .promoCaption {
               min-width: 100%;
               box-sizing: border-box;
@@ -319,7 +320,7 @@
               }
             }
             .promoImage, .promoLink {
-              height: 100%;
+//              height: 100%;
               position: relative;
               display: inline-block;
               max-width: 100%;
@@ -481,14 +482,15 @@
   .actionButtons {
     width: 100%;
     position: absolute;
-    bottom: 0;
+    top: 100%;
     left: 0;
     padding: 8px 0;
     text-align: center;
     z-index: 9997;
+    margin-top: -48px;
     &.top {
       top: 0;
-      bottom: auto;
+      margin: 0;
     }
     a {
       display: inline-block;
